# Agentic-Educator-Copilot

./: .env.example  .gitignore  README.md  app.py  docx_output.txt  prd.md  pyproject.toml  requirements.txt
.kiro/specs/institutional-rps-template/: .config.kiro  requirements.md  tasks.md
.kiro/specs/rps-review-agent/: requirements.md  tasks.md
agents/: curriculum_agent.py  learning_agent.py  state.py
backend/: .env.example  educopilot.db  pyproject.toml  requirements.txt
backend/app/: main.py  seed.py
backend/app/agents/: auto_material_agent.py  grading_agent.py  quiz_agent.py  remedial_agent.py  rps_agent.py  rps_review_agent.py
backend/app/api/v1/: courses.py  dashboard.py  grading.py  knowledge.py  materials.py  quiz.py  rps.py  settings.py  students.py
backend/app/core/: config.py  database.py  llm.py  rag.py  rps_coerce.py  rps_constants.py  rps_migration.py  sndikti_catalog.py  stats.py
backend/app/models/: __init__.py  course.py  material.py  quiz.py  rps.py  rps_finding.py  rps_meeting.py  setting.py  student.py  submission.py
backend/app/services/: pdf_generator.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: layout.tsx  (+1 more)
frontend/src/lib/: api.ts
lib/: docx_exporter.py  llm_router.py  slide_exporter.py  template_presets.py
pages/: 0_preset.py  1_setup_mk.py  2_rps_review.py  3_material_upload.py  4_quiz_input.py  5_performance.py  6_reports.py  7_export.py
tools/: calculator.py  database.py  document_reader.py  quiz_generator.py  web_search.py
(+36 files in other folders)
