[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=0.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pypdf2>=3.0.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]
